
[package]
name = "englishnlp"
version = "0.1.0"
authors = ["heartleth <myjmyjmyj237@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = "0.8.1"
serde_json = "*"
actix-web = "3"
serde_derive = "*"
serde = "*"